--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vite": "^2.7.4"
   },
   "dependencies": {
+    "@react-hook/resize-observer": "^1.2.5",
     "ace-builds": "^1.4.13",
     "antd": "^4.17.4",
     "lodash": "^4.17.21",
