--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2"
   }
 }
