--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ts-jest": "^27.1.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
-    "vite": "^2.7.4"
+    "vite": "^2.7.4",
+    "vite-plugin-pwa": "^0.14.1"
   },
   "dependencies": {
     "@react-hook/resize-observer": "^1.2.5",
