--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "ace-builds": "^1.4.13",
     "antd": "^4.17.4",
     "lodash": "^4.17.21",
+    "node-snowflake": "^0.0.1",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^9.0.0"
   }
 }
