--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-hook/resize-observer": "^1.2.5",
     "ace-builds": "^1.4.13",
     "antd": "^4.17.4",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "node-snowflake": "^0.0.1",
     "react": "^17.0.2",
